Added some nf-core inspired flare :)

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,20 @@
+params {
+    samplesheet = null
+    help = false
+}
 
 profiles {
     elion        { includeConfig "config/elion.config" }
     sumner       { includeConfig "config/sumner.config" }
     test         { includeConfig "config/test.config" }
+}
+
+
+manifest {
+    name = "nf-tenx"
+    author = "Bill Flynn, Martine Seignon"
+    homePage = "https://github.com/TheJacksonLaboratory/nf-tenx"
+    mainScript = "main.nf"
+    nextflowVersion = "!>21.04.0"
+    version = "0.1.0"
 }
