Added per-profile cpu/memory configs

--- a/config/elion.config
+++ b/config/elion.config
@@ -4,6 +4,13 @@ params {
     config_profile_url = 'https://jacksonlaboratory.sharepoint.com/sites/ResearchIT/SitePages/HPC-Overview.aspx'
 }
 
+params {
+    max_memory = 320.GB
+    max_cpus = 72
+    max_time = 336.h
+    time_scale_factor = 1
+}
+
 env {
     NXF_WORK = '/sc/service/tmp'
     NXF_SINGULARITY_CAHCEDIR = '/sc/service/tmp/singularity_cache'
@@ -14,6 +21,13 @@ executor.$slurm {
     submitRateLimit = '1 / 2 s'
 }
 
+singularity {
+    process.module = 'singularity'
+    enabled = true
+    autoMounts = true
+    runOptions = '-B /gt,/sc'
+}
+
 process {
     shell = ['/bin/bash', '-euo', 'pipefail']
     executor = 'slurm'
@@ -22,15 +36,12 @@ process {
     module = 'slurm'
 }
 
-singularity {
-    process.module = 'singularity'
-    enabled = true
-    autoMounts = true
-    runOptions = '-B /gt,/sc'
-}
+process {
+    cpus = 1
+    memory = '8 GB'
+    errorStrategy = 'retry'
+    maxRetries = 3
 
-params {
-    max_memory = 320.GB
-    max_cpus = 72
-    max_time = 336.h
+    withName: '*count*' { cpus = 32; memory = '168 GB' }
+    withLabel: 'high_mem' { memory = '168 GB' }
 }
