--- a/config/sumner.config
+++ b/config/sumner.config
@@ -5,6 +5,21 @@ params {
     singularity_cache_dir = '/fastscratch/singularity_cache_nfcore'
 }
 
+params {
+    max_memory = 320.GB
+    max_cpus = 32
+    max_time = 336.h
+    time_scale_factor = 2
+}
+
+singularity{
+    enabled = true
+    autoMounts = true
+    process.module = 'singularity'
+    cacheDir = params.singularity_cache_dir
+    runOptions = '-B /sc,/gt'
+}
+
 executor.$slurm {
     queueSize = 250
     submitRateLimit = '1 / 2 s'
@@ -17,16 +32,12 @@ process {
     module = 'slurm'
 }
 
-singularity{
-    enabled = true
-    autoMounts = true
-    process.module = 'singularity'
-    cacheDir = params.singularity_cache_dir
-    runOptions = '-B /sc,/gt'
-}
+process {
+    cpus = 1
+    memory = '8 GB'
+    errorStrategy = 'retry'
+    maxRetries = 3
 
-params {
-    max_memory = 320.GB
-    max_cpus = 32
-    max_time = 336.h
+    withName: '*count*' { cpus = 16; memory = '96 GB' }
+    withLabel: 'high_mem' { memory = '168 GB' }
 }
