--- a/config/test.config
+++ b/config/test.config
@@ -1,5 +1,9 @@
 import java.text.SimpleDateFormat
 
+params {
+    time_scale_factor = 1
+}
+
 env {
     SINGULARITY_BIND = "/sc,/gt"
 }
@@ -27,3 +31,10 @@ executor {
     }
 }
 
+
+process {
+    cpus = 1
+    memory = '1 GB'
+    maxRetries = 1
+    errorStrategy = 'terminate'
+}
