--- a/nextflow.config
+++ b/nextflow.config
@@ -15,6 +15,6 @@ manifest {
     author = "Bill Flynn, Martine Seignon"
     homePage = "https://github.com/TheJacksonLaboratory/nf-tenx"
     mainScript = "main.nf"
-    nextflowVersion = "!>21.04.0"
+    nextflowVersion = "!>=20.10.0"
     version = "0.1.0"
 }
