more config bug fixes

--- a/config/elion.config
+++ b/config/elion.config
@@ -16,11 +16,6 @@ env {
     NXF_SINGULARITY_CAHCEDIR = '/sc/service/tmp/singularity_cache'
 }
 
-executor.$slurm {
-    queueSize = 250
-    submitRateLimit = '1 / 2 s'
-}
-
 singularity {
     process.module = 'singularity'
     enabled = true
@@ -42,6 +37,14 @@ process {
     errorStrategy = 'retry'
     maxRetries = 3
 
-    withName: '*count*' { cpus = 32; memory = '168 GB' }
+    withName: '.*count.*' { cpus = 32; memory = '168 GB' }
     withLabel: 'high_mem' { memory = '168 GB' }
 }
+
+executor {
+    $slurm {
+        queueSize = 250
+        submitRateLimit = '1 / 2 s'
+    }
+}
+
