--- a/config/sumner.config
+++ b/config/sumner.config
@@ -38,6 +38,6 @@ process {
     errorStrategy = 'retry'
     maxRetries = 3
 
-    withName: '*count*' { cpus = 16; memory = '96 GB' }
+    withName: '.*count.*' { cpus = 16; memory = '96 GB' }
     withLabel: 'high_mem' { memory = '168 GB' }
 }
