Fixed bugs in cluster configs

--- a/config/elion.config
+++ b/config/elion.config
@@ -33,11 +33,12 @@ process {
 
 process {
     cpus = 1
-    memory = '8 GB'
+    memory = '2 GB'
     errorStrategy = 'retry'
     maxRetries = 3
 
     withName: '.*count.*' { cpus = 32; memory = '168 GB' }
+    withName: '.*vdj.*' { cpus = 16; memory = '96 GB' }
     withLabel: 'high_mem' { memory = '168 GB' }
 }
 
@@ -45,6 +46,9 @@ executor {
     $slurm {
         queueSize = 250
         submitRateLimit = '1 / 2 s'
+    }
+    $local {
+        memory = '2 GB'
     }
 }
 
