--- a/config/sumner.config
+++ b/config/sumner.config
@@ -39,5 +39,6 @@ process {
     maxRetries = 3
 
     withName: '.*count.*' { cpus = 16; memory = '96 GB' }
+    withName: '.*vdj.*' { cpus = 16; memory = '96 GB' }
     withLabel: 'high_mem' { memory = '168 GB' }
 }
