--- a/config/elion.config
+++ b/config/elion.config
@@ -24,7 +24,7 @@ singularity {
 }
 
 process {
-    shell = ['/bin/bash', '-euo', 'pipefail']
+    //shell = ['/bin/sh', '-euo', 'pipefail']
     executor = 'slurm'
     queue = 'batch'
     clusterOptions = '-q normal'
