Scaling back cpus but increasing ram/core for citeseqcount

--- a/config/elion.config
+++ b/config/elion.config
@@ -37,7 +37,8 @@ process {
     errorStrategy = 'retry'
     maxRetries = 3
 
-    withName: '.*count.*' { cpus = 32; memory = '168 GB' }
+    withName: '.*ranger.*count.*' { cpus = 32; memory = '168 GB' }
+    withName: '.*citeseq.*' { cpus = 4; memory = '128 GB' }
     withName: '.*vdj.*' { cpus = 16; memory = '96 GB' }
     withLabel: 'high_mem' { memory = '168 GB' }
 }
