Test configs changes

--- a/config/test.config
+++ b/config/test.config
@@ -26,15 +26,15 @@ profiles {
 
 executor {
     $local {
-        cpus = 1
-        memory = '1 GB'
+        //cpus = 1
+        memory = '8 GB'
     }
 }
 
 
 process {
-    cpus = 1
-    memory = '1 GB'
+    //cpus = 1
+    memory = '8 GB'
     maxRetries = 1
     errorStrategy = 'terminate'
 }
