Sumner config update

--- a/config/sumner.config
+++ b/config/sumner.config
@@ -12,17 +12,16 @@ params {
     time_scale_factor = 2
 }
 
-singularity{
-    enabled = true
-    autoMounts = true
-    process.module = 'singularity'
-    cacheDir = params.singularity_cache_dir
-    runOptions = '-B /sc,/gt'
+env {
+    NXF_WORK = '/fastscratch/singlecellcore/'
+    NXF_SINGULARITY_CAHCEDIR = '/fastscratch/singlecellcore/'
 }
 
-executor.$slurm {
-    queueSize = 250
-    submitRateLimit = '1 / 2 s'
+singularity {
+    process.module = 'singularity'
+    enabled = true
+    autoMounts = true
+    runOptions = '-B /projects,/fastscratch'
 }
 
 process {
@@ -38,7 +37,18 @@ process {
     errorStrategy = 'retry'
     maxRetries = 3
 
-    withName: '.*count.*' { cpus = 16; memory = '96 GB' }
+    withName: '.*ranger.*count.*' { cpus = 16; memory = '96 GB' }
+    withName: '.*citeseq.*' { cpus = 4; memory = '96 GB' }
     withName: '.*vdj.*' { cpus = 16; memory = '96 GB' }
     withLabel: 'high_mem' { memory = '168 GB' }
+}
+
+executor {
+    $slurm {
+        queueSize = 250
+        submitRateLimit = '1 / 2 s'
+    }
+    $local {
+        memory = '2 GB'
+    }
 }
