Add gpfs to sumner singularity options

--- a/config/sumner.config
+++ b/config/sumner.config
@@ -21,7 +21,7 @@ singularity {
     process.module = 'singularity'
     enabled = true
     autoMounts = true
-    runOptions = '-B /projects,/fastscratch'
+    runOptions = '-B /projects,/fastscratch,/gpfs'
 }
 
 process {
