Test config updated

--- a/config/test.config
+++ b/config/test.config
@@ -1,6 +1,9 @@
 import java.text.SimpleDateFormat
 
 params {
+    max_memory = 12.GB
+    max_cpus = 2
+    max_time = 2.h
     time_scale_factor = 1
 }
 
@@ -8,33 +11,25 @@ env {
     SINGULARITY_BIND = "/sc,/gt"
 }
 
+singularity {
+    process.module = 'singularity'
+    enabled = true
+    autoMounts = true
+    runOptions = '-B /gt,/sc'
+}
+
 process.shell = ['/bin/bash', '-euo', 'pipefail']
 
-profiles {
-    standard {
-        process.executor = "local"
-    }
-    
-    singularity {
-        process.module = "singularity"
-        singularity.enabled = true
-        singularity.autoMounts = true
-        singularity.runOptions = "-B /gt,/sc"
-    }
-}
-
-
-executor {
-    $local {
-        //cpus = 1
-        memory = '8 GB'
-    }
-}
-
-
 process {
-    //cpus = 1
+    executor = 'local'
+    cpus = 1
     memory = '8 GB'
     maxRetries = 1
     errorStrategy = 'terminate'
+}
+
+executor {
+    $local {
+        memory = '8 GB'
+    }
 }
