Configs updated to match capitalization changes

--- a/config/elion.config
+++ b/config/elion.config
@@ -37,9 +37,9 @@ process {
     errorStrategy = 'retry'
     maxRetries = 3
 
-    withName: '.*ranger.*count.*' { cpus = 32; memory = '168 GB' }
-    withName: '.*citeseq.*' { cpus = 4; memory = '128 GB' }
-    withName: '.*vdj.*' { cpus = 16; memory = '96 GB' }
+    withName: '.*RANGER.*COUNT.*' { cpus = 32; memory = '168 GB' }
+    withName: '.*CITESEQ.*' { cpus = 4; memory = '128 GB' }
+    withName: '.*VDJ.*' { cpus = 16; memory = '96 GB' }
     withLabel: 'high_mem' { memory = '168 GB' }
 }
 
