--- a/config/sumner.config
+++ b/config/sumner.config
@@ -37,9 +37,9 @@ process {
     errorStrategy = 'retry'
     maxRetries = 3
 
-    withName: '.*RANGER.*COUNT.*' { cpus = 16; memory = '96 GB' }
-    withName: '.*CITESEQ.*' { cpus = 4; memory = '96 GB' }
-    withName: '.*VDJ.*' { cpus = 16; memory = '96 GB' }
+    withLabel: '10x_genomics_count' { cpus = 16; memory = '96 GB' }
+    withLabel: '10x_genomics_other' { cpus = 16; memory = '96 GB' }
+    withLabel: 'alternative_count' { cpus = 4; memory = '96 GB' }
     withLabel: 'high_mem' { memory = '168 GB' }
 }
 
