withLabel labels can't start with 1

--- a/config/sumner.config
+++ b/config/sumner.config
@@ -37,8 +37,8 @@ process {
     errorStrategy = 'retry'
     maxRetries = 3
 
-    withLabel: '10x_genomics_count' { cpus = 16; memory = '96 GB' }
-    withLabel: '10x_genomics_other' { cpus = 16; memory = '96 GB' }
+    withLabel: 'tenx_genomics_count' { cpus = 16; memory = '96 GB' }
+    withLabel: 'tenx_genomics_other' { cpus = 16; memory = '96 GB' }
     withLabel: 'alternative_count' { cpus = 4; memory = '96 GB' }
     withLabel: 'high_mem' { memory = '168 GB' }
 }
