--- a/nextflow.config
+++ b/nextflow.config
@@ -12,9 +12,9 @@ profiles {
 
 manifest {
     name = "nf-tenx"
-    author = "Bill Flynn, Martine Seignon"
+    author = "Bill Flynn, Martine Seignon, Chee Hong Wong"
     homePage = "https://github.com/TheJacksonLaboratory/nf-tenx"
     mainScript = "main.nf"
     nextflowVersion = "!>=20.10.0"
-    version = "0.1.0"
+    version = "0.3.4"
 }
