--- a/config/sumner.config
+++ b/config/sumner.config
@@ -13,15 +13,15 @@ params {
 }
 
 env {
-    NXF_WORK = '/fastscratch/singlecellcore/'
-    NXF_SINGULARITY_CAHCEDIR = '/fastscratch/singlecellcore/'
+    NXF_WORK = '/fastscratch/nf-tenx_work/'
+    NXF_SINGULARITY_CAHCEDIR = '/fastscratch/nf-tenx_work/'
 }
 
 singularity {
     process.module = 'singularity'
     enabled = true
     autoMounts = true
-    runOptions = '-B /projects,/fastscratch,/gpfs'
+    runOptions = '-B /projects,/fastscratch,/gpfs,/pod'
 }
 
 process {
@@ -33,7 +33,7 @@ process {
 
 process {
     cpus = 1
-    memory = '8 GB'
+    memory = '2 GB'
     errorStrategy = 'retry'
     maxRetries = 3
 
