--- a/nextflow.config
+++ b/nextflow.config
@@ -1,5 +1,6 @@
 params {
     samplesheet = null
+    publish_fastqs = true
     help = false
 }
 
@@ -16,5 +17,5 @@ manifest {
     homePage = "https://github.com/TheJacksonLaboratory/nf-tenx"
     mainScript = "main.nf"
     nextflowVersion = "!>=20.10.0"
-    version = "0.6.7"
+    version = "0.6.8"
 }
