Add annotation capability and RNA velocity
This commit allows the pipeline to annotate
annotate the filtered_feature_bc_matrix.h5
file outputted by 'cellranger'. It also allows
for optional RNA velocity analysis with 'velocyto'.

--- a/config/elion.config
+++ b/config/elion.config
@@ -41,6 +41,7 @@ process {
     withLabel: 'tenx_genomics_other' { cpus = 16; memory = '96 GB' }
     withLabel: 'alternative_count' { cpus = 4; memory = '128 GB' }
     withLabel: 'high_mem' { memory = '168 GB' }
+    withLabel: 'velocyto' { cpus = 30; memory = '50 GB' }
 }
 
 executor {
