Create a (nearly) fully functional annotation pipeline
This commit creates a nearly fully functional annotation pipeline.
After `cellranger count` creates a `filtered_feature_bc_matrix`, `soupx`
creates its own from the `cellranger` outputs. The `soupx` matrix should
have ambient RNA filtered out. Both matrices are then annotated in
parallel for various gene types and doublets, and plots are generated
automatically, as well as a web summary including plots. The web summary
is as of yet incomplete, as it does not contain a list of the genes
annotated, nor does it create the correct directory tree. The flowchart
is also incorrect at the moment.

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,4 @@ pubdir
 .nextflow*
 tests/test_data/*fastq.gz
 .vscode
-gex_samplesheet.yml
-bin/strainedCounts
-read.py
-Rplots.pdf
-soupx_filtered_matrix_test_1.h5
-soupx_filtered.h5
+**/__pycache__
