forgot to close a quote

--- a/config/elion.config
+++ b/config/elion.config
@@ -34,7 +34,7 @@ process {
 process {
     cpus = 1
     memory = '2 GB'
-    errorStrategy = 'retry
+    errorStrategy = 'retry'
     maxRetries = 3
 
     withLabel: 'tenx_genomics_count' { cpus = 32; memory = '168 GB' }
