Update elion.config use beforeScript to load module

--- a/config/elion.config
+++ b/config/elion.config
@@ -29,6 +29,7 @@ process {
     queue = 'batch'
     clusterOptions = '-q normal'
     module = 'slurm'
+    beforeScript = 'module use /sc/service/tools/modules/10x-genomics/'
 }
 
 process {
