Update elion.config new env chunk to load cr via module

--- a/config/elion.config
+++ b/config/elion.config
@@ -23,12 +23,17 @@ singularity {
     runOptions = '-B /gt,/sc'
 }
 
+EnvModules {
+    process.module = 'module'
+    beforeScript = 'module use /sc/service/tools/modules/10x-genomics/'
+}
+
 process {
     //shell = ['/bin/sh', '-euo', 'pipefail']
     executor = 'slurm'
     queue = 'batch'
     clusterOptions = '-q normal'
-    beforeScript = 'module use /sc/service/tools/modules/10x-genomics/'
+    module = 'slurm'
 }
 
 process {
