Update elion.config reverting to using a beforescript in a process chunk

--- a/config/elion.config
+++ b/config/elion.config
@@ -23,17 +23,18 @@ singularity {
     runOptions = '-B /gt,/sc'
 }
 
-EnvModules {
-    process.module = 'module'
-    beforeScript = 'module use /sc/service/tools/modules/10x-genomics/'
-}
+//EnvModules {
+//  process.module = 'module'
+//  beforeScript = 'module use /sc/service/tools/modules/10x-genomics/'
+//}
 
 process {
     //shell = ['/bin/sh', '-euo', 'pipefail']
     executor = 'slurm'
     queue = 'batch'
     clusterOptions = '-q normal'
-    module = 'slurm'
+    //module = 'slurm'
+    beforeScript = 'module use /sc/service/tools/modules/10x-genomics/'
 }
 
 process {
